<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/blue_gradient"
                android:id="@+id/bd_main_layout">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="350dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/bd_cover"
            android:layout_marginBottom="5dp" android:layout_centerInParent="true"/>
    <TextView
            android:text="@string/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bd_title"
            android:layout_below="@id/bd_cover" android:layout_alignStart="@id/bd_cover"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:text="@string/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bd_author"
            android:layout_below="@id/bd_title" android:layout_alignStart="@id/bd_cover"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:text="@string/isbn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bd_isbn"
            android:layout_below="@id/bd_author" android:layout_alignStart="@id/bd_cover"/>
    <androidx.appcompat.widget.AppCompatButton
            style="@style/default_button"
            android:text="@string/bd_delete_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bd_delete_but"
            android:layout_below="@id/bd_isbn" android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp" android:paddingEnd="20dp"/>
</RelativeLayout>