<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="10"
              android:background="@color/apple_blue_light" android:id="@+id/l_main_layout">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/l_search_entry" android:layout_weight="1"
            android:layout_marginStart="@dimen/start_padding"
            android:layout_marginEnd="@dimen/end_padding"
            android:hint="@string/l_search_hint"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:weightSum="3" android:layout_weight="0.75"
            android:layout_marginStart="@dimen/start_padding"
            android:layout_marginEnd="@dimen/end_padding">
        <androidx.appcompat.widget.SwitchCompat
                android:text="@string/l_search_tab1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/l_title_switch"
                android:layout_weight="1" android:minHeight="48dp"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track"
                android:paddingStart="@dimen/side_padding"
                android:paddingEnd="@dimen/side_padding"/>
        <androidx.appcompat.widget.SwitchCompat
                android:text="@string/l_search_tab2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/l_author_switch"
                android:layout_weight="1" android:minHeight="48dp"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track"
                android:paddingEnd="@dimen/side_padding"
                android:paddingStart="@dimen/side_padding"/>
        <androidx.appcompat.widget.SwitchCompat
                android:text="@string/l_search_tab3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/l_isbn_switch"
                android:layout_weight="1" android:minHeight="48dp"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track"
                android:paddingEnd="@dimen/side_padding"
                android:paddingStart="@dimen/side_padding"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:weightSum="2" android:layout_weight="1"
            android:layout_marginStart="@dimen/start_padding"
            android:layout_marginEnd="@dimen/end_padding">
        <androidx.appcompat.widget.AppCompatButton
                style="@style/default_button"
                android:text="@string/l_search_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/l_search_but"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/button_end_padding"
        />
        <androidx.appcompat.widget.AppCompatButton
                style="@style/default_button"
                android:text="@string/l_view_all_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/l_view_all_but"
                android:layout_weight="1" android:layout_marginStart="10dp"
        />
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="7.25"
    >
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/l_book_list">
        </androidx.recyclerview.widget.RecyclerView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true" app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/l_add_book_but"
                android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/float_but_end_padding"
                android:layout_marginBottom="@dimen/float_but_bottom_padding"
                app:backgroundTint="@color/white"/>
    </RelativeLayout>
</LinearLayout>